--- a/example_portfolio/index.html
+++ b/example_portfolio/index.html
@@ -26,7 +26,7 @@
     <article>
       <header class="hero">
         <h1 class="hero-text">Welcome to my Portfolio.</h1>
-        <h4 class="hero-byline">By: Gene Koh</h4>
+        <h4 class="hero-byline">Gene Koh</h4>
       </header>
       <div class="featured-blogs">
         <h2 class="featured-blogs-header">Featured Blogs:</h2>
